Update 'lpngeoi26-dotnet-basic' component image to: quay.io/rhtap_qe/rhtap-qe-dotnet-basic:8577c377e1b6da22ae2995451de9ba263289a670@sha256:a37aaf62b98015270f0f7cbe547728fcf1b292312c1415ec6f55be1fa26227d9

--- a/components/lpngeoi26-dotnet-basic/overlays/development/deployment-patch.yaml
+++ b/components/lpngeoi26-dotnet-basic/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: lpngeoi26-dotnet-basic
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-dotnet-basic:8577c377e1b6da22ae2995451de9ba263289a670@sha256:a37aaf62b98015270f0f7cbe547728fcf1b292312c1415ec6f55be1fa26227d9
+          name: container-image
